# python

./: .gitignore  pyproject.toml
.history/: test_20250510195628.py  test_20250510195629.py  test_20250510195657.py
.history/SF/: main_20250513163925.py
SF/: __init__.py  readme.km
SF/controller/: __init__.py  spider.py
deepseek/: run.py
